[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/PlayerShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Torpedo.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Asteroid.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Collectable.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/space background.jpg" type="Texture" id=7]
[ext_resource path="res://music/Race to Mars.mp3" type="AudioStream" id=8]
[ext_resource path="res://music/missle.mp3" type="AudioStream" id=9]
[ext_resource path="res://music/asteroid explosion - 1_14_23, 4.02 PM.mp3" type="AudioStream" id=10]
[ext_resource path="res://music/gem collected - 1_14_23, 4.01 PM.mp3" type="AudioStream" id=11]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 0, 0, 0, 384, 0, 0, 0, 0, 0, 632, 0, 0, 0, 0, 0, 832, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 128, 0, 0, 0, 0, 1024, 320, 0, 0, 0, 0, 1024, 456, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 832, 600, 0, 0, 0, 0, 632, 600, 0, 0, 0, 0, 392, 600, 0, 0, 0, 0, 192, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 472, 0, 0, 0, 0, 0, 336, 0, 0, 0, 0, 0, 168, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
torpedo_scene = ExtResource( 3 )
asteroid_scene = ExtResource( 4 )
player_ship_scene = ExtResource( 1 )
collectable_scene = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 2.02335, 1.71111 )
texture = ExtResource( 7 )

[node name="PlayerShip" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 408 )
z_index = 1

[node name="AsteroidPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AsteroidPath"]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 408 )

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="StartTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ShipFire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="GemCollected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="AsteroidDestroyed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="ship_hit" from="PlayerShip" to="." method="game_over"]
[connection signal="torpedo_fired" from="PlayerShip" to="." method="fire_torpedo"]
[connection signal="tree_entered" from="AsteroidPath/AsteroidSpawnLocation" to="." method="_on_AsteroidSpawnLocation_tree_entered"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="game_ready" from="HUD" to="." method="toggle_game_ready"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
